--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </div>
     <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 py-3">
-        <h2 class="display-5">Te acompañamos a rendir</h2>
+        <h2 class="display-5">Te acompañamos a rendir.</h2>
         <p class="parrafoAlineado">Nuestro servicio también tiene la opción de poder rendir el exámen práctico con el vehículo de nuestra flota si así usted lo decide.
         </p>
       </div>
@@ -210,13 +210,12 @@
 <!-- Footer -->
 
 <footer>
-  <div class="divFooter1 p-3 p-md-5 m-md-3 mx-auto overflow-hidden" >
-  <h3>Nuestras lineas de contacto:</h3>
-  </div>
-  <div class="divFooter2 p-3 p-md-5 m-md-3 mx-auto overflow-hidden">
+  <div class="container col-sm text-center align-items-center" >
+  <h3 class="btn btn-outline-warning nav-item">Contacto:</h3>
+  <div class="container col-sm text-center">
     <a href="https://www.facebook.com/automotores.sarandi" target="_blank"><img class="logos" src="./Practica/LogoFB.png"><br></a>
-    <a href="https://www.instagram.com/escue_lademanejo/?hl=es-la" target="_blank"><img class="logos" src="./Practica/LogoIG.png"><br></a>
-    <a href="https://wa.me/1166575087" target="_blank"><img class="logos paddingWhp" src="./Practica/LogoWhp.png"></a> 
+    <a href="https://www.instagram.com/escue_lademanejo/?hl=es-la" target="_blank "><img class="logos" src="./Practica/LogoIG.png"><br></a>
+    <a href="https://wa.me/1166575087" target="_blank"><img class="logos" src="./Practica/LogoWhp.png"></a> 
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
