--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-inverse site-header sticky-top py-1 navbar-toggleable-sm">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler marginNav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon marginNav"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-around mr-auto text-center" id="navbarTogglerDemo01">
           <a class="btn btn-outline-warning nav-item nav-link" href="./index.html">Inicio</a>
@@ -211,7 +211,7 @@
 
 <footer>
   <div class="container col-sm text-center align-items-center" >
-  <h3 class="btn btn-outline-warning nav-item">Contacto:</h3>
+  <h3 class="btn btn-outline-warning nav-item nav-link">Contacto:</h3>
   <div class="container col-sm text-center">
     <a href="https://www.facebook.com/automotores.sarandi" target="_blank"><img class="logos" src="./Practica/LogoFB.png"><br></a>
     <a href="https://www.instagram.com/escue_lademanejo/?hl=es-la" target="_blank "><img class="logos" src="./Practica/LogoIG.png"><br></a>
