--- a/Nuestra_flota.html
+++ b/Nuestra_flota.html
@@ -108,16 +108,15 @@
 
 <!-- Footer -->
 
-  <footer>
-    <div class="divFooter1 p-3 p-md-5 m-md-3 mx-auto overflow-hidden" >
-    <h3>Nuestras lineas de contacto:</h3>
-    </div>
-    <div class="divFooter2 p-3 p-md-5 m-md-3 mx-auto overflow-hidden">
-      <a href="https://www.facebook.com/automotores.sarandi" target="_blank"><img class="logos" src="./Practica/LogoFB.png"><br></a>
-      <a href="https://www.instagram.com/escue_lademanejo/?hl=es-la" target="_blank"><img class="logos" src="./Practica/LogoIG.png"><br></a>
-      <a href="https://wa.me/1166575087" target="_blank"><img class="logos paddingWhp" src="./Practica/LogoWhp.png"></a> 
-    </div>
-  </footer>
+<footer>
+  <div class="container col-sm text-center align-items-center" >
+  <h3 class="btn btn-outline-warning nav-item">Contacto:</h3>
+  <div class="container col-sm text-center">
+    <a href="https://www.facebook.com/automotores.sarandi" target="_blank"><img class="logos" src="./Practica/LogoFB.png"><br></a>
+    <a href="https://www.instagram.com/escue_lademanejo/?hl=es-la" target="_blank "><img class="logos" src="./Practica/LogoIG.png"><br></a>
+    <a href="https://wa.me/1166575087" target="_blank"><img class="logos" src="./Practica/LogoWhp.png"></a> 
+  </div>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
         
