--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 <footer>
   <div class="container col-sm text-center align-items-center" >
-  <h3 class="btn btn-outline-warning nav-item nav-link">Contacto:</h3>
+  <h3 class="btn btn-outline-warning nav-item">Contacto:</h3>
   <div class="container col-sm text-center">
     <a href="https://www.facebook.com/automotores.sarandi" target="_blank"><img class="logos" src="./Practica/LogoFB.png"><br></a>
     <a href="https://www.instagram.com/escue_lademanejo/?hl=es-la" target="_blank "><img class="logos" src="./Practica/LogoIG.png"><br></a>
